--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300|Playfair+Display:700&display=swap&subset=latin-ext');
 
+body {
+  background-color: lavenderblush;
+}
+
 html {
   font-family: 'Open Sans', sans-serif;
   font-size: 15px;
